<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A3E4D7"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="0.5"
        android:src="@drawable/app_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/add_photo_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_text_rounded"
            android:text="@string/add_photo"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/notes_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/write_your_notes"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/claim_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3B4252"
            android:text="@string/claim_now"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="#FFFFFF" />

        <Button
            android:id="@+id/show_my_history_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3B4252"
            android:text="@string/show_my_history"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>