<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp"
        android:stretchColumns="*">

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#A3E4D7"
                android:gravity="center"
                android:text="@string/address"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#3B4252"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#A3E4D7"
                android:gravity="center"
                android:text="@string/claim_date_time"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#3B4252"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="#A3E4D7"
                android:gravity="center"
                android:text="@string/status"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#3B4252"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:background="#A3E4D7"
                android:gravity="center"
                android:text="@string/authentic"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#3B4252"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout

        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/history_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>